bugfix wrapping to new line bets of others

--- a/src/main/resources/static/css/pages/others.css
+++ b/src/main/resources/static/css/pages/others.css
@@ -2,3 +2,11 @@
 	padding: 0px;
 	background-color: white;
 }
+
+.no-right-padding {
+	padding-right: 0;
+}
+
+.no-left-padding {
+	padding-left: 0;
+}
